crates/reinhardt-pages/tests/ui/style/fail/accessor_collision.stderr
error: multiple classes generate accessor `foo_bar`; rename one class so every generated method is unique
 --> tests/ui/style/fail/accessor_collision.rs:4:64
  |
4 | static STYLES: CardStyles = style! { .foo-bar { color: red; } .foo_bar { color: blue; } };
  |                                                                ^^^^^^^

error: first generated by class `.foo-bar`
 --> tests/ui/style/fail/accessor_collision.rs:4:39
  |
4 | static STYLES: CardStyles = style! { .foo-bar { color: red; } .foo_bar { color: blue; } };
  |                                       ^^^

error: also generated by class `.foo_bar`
 --> tests/ui/style/fail/accessor_collision.rs:4:64
  |
4 | static STYLES: CardStyles = style! { .foo-bar { color: red; } .foo_bar { color: blue; } };
  |                                                                ^^^^^^^
